test/expected/explain_strf_v.out
explain static void f() &
                    ^
21: error: reference qualified functions can not be "static"
